# Linky-TIC-version-converter

./: CMakeLists.txt  PGsql.cpp  README.md  config.cpp  header.h  main.cpp
